crates/pg_syntax/tests/snapshots/postgres_regress/drop_if_exists@6.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: CREATE VIEW test_view_exists AS select * from test_exists;
---
ViewStmt@0..58
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  View@7..11 "VIEW"
  Whitespace@11..12 " "
  RangeVar@12..28
    Ident@12..28 "test_view_exists"
  Whitespace@28..29 " "
  As@29..31 "AS"
  Whitespace@31..32 " "
  SelectStmt@32..57
    Select@32..38 "select"
    Whitespace@38..39 " "
    ResTarget@39..40
      ColumnRef@39..40
        AStar@39..40
          Ascii42@39..40 "*"
    Whitespace@40..41 " "
    From@41..45 "from"
    Whitespace@45..46 " "
    RangeVar@46..57
      Ident@46..57 "test_exists"
  Ascii59@57..58 ";"

