crates/pg_syntax/tests/snapshots/postgres_regress/equivclass@11.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: create cast (int8alias1 as int8) without function;
---
CreateCastStmt@0..50
  Create@0..6 "create"
  Whitespace@6..7 " "
  Cast@7..11 "cast"
  Whitespace@11..12 " "
  Ascii40@12..13 "("
  TypeName@13..23
    Ident@13..23 "int8alias1"
  Whitespace@23..24 " "
  As@24..26 "as"
  Whitespace@26..27 " "
  TypeName@27..31
    Ident@27..31 "int8"
  Ascii41@31..32 ")"
  Whitespace@32..33 " "
  Without@33..40 "without"
  Whitespace@40..41 " "
  Function@41..49 "function"
  Ascii59@49..50 ";"

