crates/pg_syntax/tests/snapshots/postgres_regress/equivclass@16.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "create function int8alias2eq(int8alias2, int8alias2) returns bool\n  strict immutable language internal as 'int8eq';"
---
CreateFunctionStmt@0..115
  Create@0..6 "create"
  Whitespace@6..7 " "
  Function@7..15 "function"
  Whitespace@15..16 " "
  Ident@16..28 "int8alias2eq"
  Ascii40@28..29 "("
  FunctionParameter@29..39
    TypeName@29..39
      Ident@29..39 "int8alias2"
  Ascii44@39..40 ","
  Whitespace@40..41 " "
  FunctionParameter@41..51
    TypeName@41..51
      Ident@41..51 "int8alias2"
  Ascii41@51..52 ")"
  Whitespace@52..53 " "
  Returns@53..60 "returns"
  Whitespace@60..61 " "
  TypeName@61..65
    Ident@61..65 "bool"
  Newline@65..66 "\n"
  Whitespace@66..68 "  "
  DefElem@68..74
    StrictP@68..74 "strict"
  Whitespace@74..75 " "
  DefElem@75..84
    Immutable@75..84 "immutable"
  Whitespace@84..85 " "
  DefElem@85..102
    Language@85..93 "language"
    Whitespace@93..94 " "
    Ident@94..102 "internal"
  Whitespace@102..103 " "
  DefElem@103..114
    As@103..105 "as"
    Whitespace@105..106 " "
    List@106..114
      Sconst@106..114 "'int8eq'"
  Ascii59@114..115 ";"

